--- a/consent.yaml
+++ b/consent.yaml
@@ -482,7 +482,11 @@ paths:
               $ref: '#/components/schemas/PasswordlessLoginLinkRequest'
       responses:
         201:
-          $ref: '#/components/schemas/PasswordlessLoginLinkResponse'
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PasswordlessLoginLinkResponse'
         401:
           $ref: '#/components/responses/401Unauthorised'
         403:
