ADA-4248: energy billing v3 new usage and demand timeOfUseType values

--- a/data.yaml
+++ b/data.yaml
@@ -4767,6 +4767,7 @@ components:
             - CONTROLLED_LOAD
             - SOLAR
             - AGGREGATE
+            - ALL_DAY
           type: string
         description:
           description: Optional description of the transaction that can be used for
@@ -4841,6 +4842,8 @@ components:
             - CONTROLLED_LOAD
             - SOLAR
             - AGGREGATE
+            - ALL_DAY
+            - EXCESS
           type: string
         description:
           description: Optional description of the transaction that can be used for
