--- a/data.yaml
+++ b/data.yaml
@@ -696,6 +696,7 @@ components:
             - payeeId
             - domestic
             - biller
+            - digitalWallet
             - international
         accountId:
           type: string
@@ -709,6 +710,8 @@ components:
           $ref: '#/components/schemas/BankingDomesticPayee'
         biller:
           $ref: '#/components/schemas/BankingBillerPayee'
+        digitalWallet:
+          $ref: '#/components/schemas/BankingDigitalWalletPayee'
         international:
           $ref: '#/components/schemas/BankingInternationalPayee'
       description: Object containing details of the destination of the payment. Used to specify a variety of payment destination types
@@ -717,6 +720,7 @@ components:
         - payeeId
         - domestic
         - biller
+        - digitalWallet
         - international
     BankingScheduledPaymentFrom:
       type: object
