--- a/consent.yaml
+++ b/consent.yaml
@@ -333,8 +333,8 @@ paths:
       summary: Activate consent with a response from the Data Holder
       description: |
         At the completing of the consent process at a Data Holder, the consumer will be redirected back to Adatree with a response JWT. 
-        This API takes that response JWT and exchanges it for a Refresh Token with the Data Holder, which finishes activating the consent.
-        This API replaces the deprecated endpoint `post /tokens`
+        <br/>This API takes that response JWT and exchanges it for a Refresh Token with the Data Holder, which finishes activating the consent.
+        <br/>This API replaces the deprecated endpoint `post /tokens`
       security:
         - bearerAuth: [ 'tokens:write' ]
         - m2m: [ 'tokens:write' ]
@@ -366,9 +366,9 @@ paths:
           $ref: '#/components/schemas/ConsentActivatedResponse'
     post:
       summary: Create an authorization link
-      description: | 
-        Returns an authorization request URL to send the consumer to the data holder
-        This API replaces the deprecated endpoint `get /consents/{consentId}/authorization` and can initiate either consent creation or consent extension processes
+      description: |
+        Returns an authorization request URL to send the consumer to the data holder.
+        <br/>This API replaces the deprecated endpoint `get /consents/{consentId}/authorization` and can initiate either consent creation or extension
       security:
         - bearerAuth: [ 'consents:write' ]
         - m2m: [ 'consents:write' ]
