--- a/consent.yaml
+++ b/consent.yaml
@@ -5,7 +5,7 @@ info:
   contact:
     name: Adatree
     email: engineering@adatree.com.au
-  version: '1.3.0'
+  version: '1.4.0'
 servers:
   - url: 'https://cdr-insights-prod.api.adatree.com.au'
     description: Server url
@@ -184,6 +184,260 @@ paths:
               schema:
                 $ref: '#/components/schemas/ConsentResponse'
         429:
+          $ref: '#/components/responses/429RateLimited'
+  /consents/v2:
+    get:
+      security:
+        - bearerAuth:
+            - 'consents:read'
+        - m2m:
+            - 'consents:read'
+      tags:
+        - Consent
+      summary: Get Consents
+      description: Get all consent records for this consumer
+      operationId: findAllConsentsV2
+      parameters:
+        - name: consumerId
+          in: query
+          description: 'Please ensure proper encoding of this parameter as identifier values from some IDPs could have special characters like ''|'', which need be encoded as ''%7c''. <br/> consumerId should only be used with machine token, otherwise it will be deemed BAD_REQUEST'
+          example: auth0%7c5fbc585628421a006e83d95d
+          required: false
+          schema:
+            type: string
+        - name: consumerEmail
+          in: query
+          example: hello@adatree.com.au
+          required: false
+          schema:
+            type: string
+        - name: consentId
+          in: query
+          example: 148c9187-e52b-431f-9b24-7225e75ca2be
+          required: false
+          schema:
+            type: string
+        - name: cdrArrangementId
+          in: query
+          example: 45db4977-b12f-42bf-808d-2680eb4bd366
+          required: false
+          schema:
+            type: string
+        - name: status
+          in: query
+          required: false
+          example: ACTIVE
+          schema:
+            type: string
+            enum:
+              - REQUESTED
+              - ACTIVE
+              - REVOKED
+              - EXPIRED
+        - name: accessFrequency
+          in: query
+          required: false
+          example: ONCE_OFF
+          schema:
+            type: string
+            enum:
+              - ONCE_OFF
+              - ONGOING
+        - name: postUsageAction
+          in: query
+          required: false
+          example: DELETION
+          schema:
+            type: string
+            enum:
+              - DELETION
+              - DE_IDENTIFICATION
+        - name: directMarketingAllowed
+          in: query
+          required: false
+          example: false
+          schema:
+            type: boolean
+        - name: useCaseIds
+          description: UseCase ids
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+        - name: dataHolderBrandId
+          in: query
+          required: false
+          example: 55b3299a-3e50-48a2-a190-cca263ccaba5
+          schema:
+            type: string
+        - name: oldestCreated
+          description: Constrain the consent with created time at or after this date/time. If absent defaults to newestCreated minus 90 days.  Format is aligned to DateTimeString common type
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '1997-01-12T15:43:00.121Z'
+        - name: newestCreated
+          description: Constrain the consent with created time at or before this date/time. If absent defaults to today. Format is aligned to DateTimeString common type
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '1997-01-12T15:43:00.121Z'
+        - name: oldestRevoked
+          description: Constrain the consent with revoked time at or after this date/time. If absent defaults to newestRevoked minus 90 days.  Format is aligned to DateTimeString common type
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '1997-01-12T15:43:00.121Z'
+        - name: newestRevoked
+          description: Constrain the consent with revoked time at or before this date/time. If absent defaults to today. Format is aligned to DateTimeString common type
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+          example: '1997-01-12T15:43:00.121Z'
+        - name: oldestCollectionEndDate
+          description: Constrain the consent with collectionEndDate time at or after this date/time. If absent defaults to newestCollectionEndDate minus 90 days.  Format is aligned to DateTimeString common type
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+          example: '1997-01-12T15:43:00.121Z'
+        - name: newestCollectionEndDate
+          description: Constrain the consent with collectionEndDate time at or before this date/time. If absent defaults to today. Format is aligned to DateTimeString common type
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '1997-01-12T15:43:00.121Z'
+        - name: externalId
+          description: Constrain the consent by externalId
+          in: query
+          required: false
+          schema:
+            type: string
+          example: an-external-id
+        - name: metadataFilter
+          in: query
+          example: "{\employerName\": \"adatree\"}"
+          description: filter matching string for values contained in custom data
+          schema:
+            type: string
+        - $ref: '#/components/parameters/ParamPage'
+        - $ref: '#/components/parameters/QueryParamPageSize'
+      responses:
+        '200':
+          description: successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ConsentsList'
+              examples:
+                Example 1:
+                  value:
+                    consents:
+                      - version: 1
+                        created: '1997-01-12T15:43:00.121Z'
+                        revoked: '1997-01-12T15:43:00.121Z'
+                        lastNotificationSentAt: '1997-01-12T15:43:00.121Z'
+                        firstDataCollection: '2012-01-12T15:43:00.121Z'
+                        status: ACTIVE
+                        sharingEndDate: '1997-01-12T15:43:00.121Z'
+                        consumerEmail: consumer@example.com
+                        dataHolderName: ANZ
+                        dataHolderBrandId: f632041c-d7c8-4679-a165-aa406cd62b13
+                        dataHolderLogoUri: 'https://www.abank.com.au/logo'
+                        useCase:
+                          id: HOME_LOAN
+                          name: Home Loan Assessment
+                          active: true
+                          softwareProductId: software product id
+                          description: Data will be used to assess your eligibility for a home loan.
+                          priority: 1
+                          historicalCollectionPeriodInDays: 90
+                          notificationType: EMAIL
+                          scopes:
+                            - name: 'Bank account name, type and balance'
+                              id: 'bank:accounts.basic:read'
+                              purpose: This will allow us to provide best of kind service
+                              claims:
+                                - Name of account
+                                - Type of account
+                                - Account balance
+                              priority: 1
+                          accessFrequency: ONCE_OFF
+                          sharingDurations:
+                            - ONE_YEAR
+                          dataHolders:
+                            - dataHolderBrandId: 7ff47a14-28bd-4b04-b216-67b367713a38
+                              brandName: Westpac
+                              logoUri: 'https://www.westpac.com.au/logo'
+                              favourite: false
+                          features:
+                            - string
+                          industries:
+                            - BANKING
+                          osps:
+                            - providerName: Adatree
+                              serviceDescription: Adatree's Data Recipient Platform is a turnkey SaaS solution providing CDR as a Service.
+                              accreditationId: ADRBNK000071
+                              cdrPolicyUri: 'https://adatree.com.au/cdr-policy'
+                          consumerType: INDIVIDUAL
+                          customDataSchema:
+                            $schema: 'https://json-schema.org/draft/2019-09/schema'
+                            type: object
+                            title: custom data Schema
+                            description: JSON schema of customer data
+                            purpose: explain why custom data is needed
+                            properties:
+                              employerName:
+                                type: string
+                                displayText: Employer name
+                                uiComponent:
+                                  inputType: text
+                                rules:
+                                  required: Employer name is required
+                        postUsageAction: DELETION
+                        consumerId: abedfaas-asdfsf-4asdf-1465-sfsadf3413
+                        cdrArrangementId: 86a5d068-447a-4765-95c2-6f5d85d9d658
+                        consentId: 7c7853a6-5466-11eb-ae93-0242ac130002
+                        directMarketingAllowed: false
+                        consumerMobileNumber: '00614000555666'
+                        externalId: external-id-by-adatree-customer
+                        grantee:
+                          name: Bob the broker
+                          licenceNumber: ACL001
+                          id: 13245551-08e5-499c-bad5-ddd26c0ac261
+                        serviceProvider:
+                          name: a cool service provider
+                          uri: 'https://wicked.service/policy.html'
+                          description: the best service provider ever
+                        metadata:
+                          employerName: Adatree
+                    links:
+                      self: 'https://self.example.com.au?page=3&pageSize=25'
+                      first: 'https://self.example.com.au?page=1&pageSize=25'
+                      prev: 'https://self.example.com.au?page=2&pageSize=25'
+                      next: 'https://self.example.com.au?page=4&pageSize=25'
+                      last: 'https://self.example.com.au?page=15&pageSize=25'
+                    meta:
+                      totalPages: 4
+                      totalRecords: 95
+        '401':
+          $ref: '#/components/responses/401Unauthorised'
+        '403':
+          $ref: '#/components/responses/403Forbidden'
+        '429':
           $ref: '#/components/responses/429RateLimited'
   /consents/{consentId}:
     get:
@@ -671,6 +925,21 @@ components:
           type: string
           description: Stringified JSON Schema for customData
           example: "{\"$schema\":\"https://json-schema.org/draft/2019-09/schema\",\"type\":\"object\",\"title\":\"custom data Schema\",\"description\":\"JSON schema of customer data\",\"purpose\":\"explain why custom data is needed\",\"properties\":{\"employerName\":{\"type\":\"string\",\"displayText\":\"Employer name\",\"uiComponent\":{\"inputType\":\"text\"},\"rules\":{\"required\":\"Employer name is required\"}}}}"
+    ConsentsList:
+      type: object
+      required:
+        - consents
+        - links
+        - meta
+      properties:
+        consents:
+          type: array
+          items:
+            $ref: '#/components/schemas/ConsentResponse'
+        links:
+          $ref: '#/components/schemas/LinksPaginated'
+        meta:
+          $ref: '#/components/schemas/MetaPaginated'
     DataHolder:
       required:
         - brandName
@@ -1444,3 +1713,13 @@ components:
           $ref: '#/components/schemas/ConsentEventType'
         example: 'WEBHOOK_SENDING_FAILED,WEBHOOK_SENDING_FAILED_CLIENT_ERROR'
       description: Consent event types to be returned
+    QueryParamPageSize:
+      name: pageSize
+      in: query
+      required: false
+      schema:
+        type: integer
+        minimum: 1
+        default: 1000
+        example: 1000
+      description: Page size to request. Default is 1000
