--- a/consent.yaml
+++ b/consent.yaml
@@ -1298,6 +1298,7 @@ components:
           type: boolean
           description: indicates the outcome of the authorization request
           example: true
+          deprecated: true
         activeConsentId:
           type: string
           description: Identifier of the consent which has now been activated by the completion of the Authorization flow.
