--- a/consent.yaml
+++ b/consent.yaml
@@ -1597,6 +1597,7 @@ components:
         - REVOKED
         - EXPIRED
         - DATA_COLLECTION_COMPLETED
+        - EMAIL_SENT
         - WEBHOOK_SENT
         - WEBHOOK_SENDING_FAILED
         - WEBHOOK_SENDING_FAILED_CLIENT_ERROR
