--- a/data.yaml
+++ b/data.yaml
@@ -264,6 +264,32 @@ paths:
           $ref: '#/components/responses/403Forbidden'
         429:
           $ref: '#/components/responses/429RateLimited'
+  /data/common/outages:
+    get:
+      tags:
+        - Common
+      summary: Get Outages
+      description: Obtain a list of scheduled outages for data holders
+      operationId: getOutages
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DiscoveryOutagesList'
+        '400':
+          $ref: '#/components/responses/400BadRequest'
+        '401':
+          $ref: '#/components/responses/401Unauthorised'
+        '403':
+          $ref: '#/components/responses/403Forbidden'
+        '429':
+          $ref: '#/components/responses/429RateLimited'
+      parameters:
+        - $ref: '#/components/parameters/QueryDataHolderBrandIds'
+        - $ref: '#/components/parameters/QueryPage'
+        - $ref: '#/components/parameters/QueryPageSize'
   /data/energy/plans:
     get:
       security:
@@ -2990,6 +3016,52 @@ components:
                 - REGISTERED
                 - WORK
                 - OTHER
+    DiscoveryOutagesList:
+      title: DiscoveryOutagesList
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/DiscoveryOutagesList_data'
+        links:
+          $ref: '#/components/schemas/LinksPaginated'
+        meta:
+          $ref: '#/components/schemas/MetaPaginated'
+    DiscoveryOutagesList_data:
+      title: DiscoveryOutagesList_data
+      type: object
+      properties:
+        dataHolderBrandId:
+          type: string
+        dataHolderName:
+          type: string
+        outages:
+          type: array
+          items:
+            $ref: '#/components/schemas/DiscoveryOutages'
+    DiscoveryOutages:
+      type: object
+      example:
+        outageTime: '2025-07-19T22:00:00'
+        duration: 'PT12H00M'
+        isPartial: true
+        explanation: 'Scheduled Maintenance'
+      required:
+        - explanation
+      properties:
+        outageTime:
+          type: string
+          description: Date and time that the outage is scheduled to begin.
+        duration:
+          type: string
+          description: Planned duration of the outage. Formatted according to ISO 8601 Durations (excludes recurrence syntax).
+        isPartial:
+          type: boolean
+          description: 'Flag that indicates, if present and set to true, that the outage is only partial meaning that only a subset of normally available endpoints will be affected by the outage.'
+        explanation:
+          type: string
+          description: Provides an explanation of the current outage that can be displayed to an end customer.
     #-------------------------------
     # Energy Schema Definitions
     #-------------------------------
