--- a/consent.yaml
+++ b/consent.yaml
@@ -178,12 +178,6 @@ paths:
           $ref: '#/components/responses/401Unauthorised'
         403:
           $ref: '#/components/responses/403Forbidden'
-        422:
-          description: active consent exists for requested use case
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ConsentResponse'
         429:
           $ref: '#/components/responses/429RateLimited'
   /consents/v2:
@@ -531,6 +525,8 @@ paths:
           $ref: '#/components/responses/403Forbidden'
         404:
           $ref: '#/components/responses/404NotFound'
+        422:
+          $ref: "#/components/responses/422UnprocessableEntity"
         429:
           $ref: '#/components/responses/429RateLimited'
   /consents/{consentId}/authorization:
@@ -1473,6 +1469,7 @@ components:
           items:
             $ref: '#/components/schemas/ResponseErrorListErrors'
     ResponseErrorListErrors:
+      type: object
       required:
         - code
         - detail
@@ -1615,6 +1612,12 @@ components:
       description: The specified resource was not found.
     409Conflict:
       description: Request cannot be processed
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ResponseErrorList'
+    422UnprocessableEntity:
+      description: Request cannot be processed on target entity.
       content:
         application/json:
           schema:
