ADA-5067: add new consent event

--- a/consent.yaml
+++ b/consent.yaml
@@ -1591,6 +1591,7 @@ components:
         - GRANTED
         - EXTENDED
         - REVOKED
+        - REMINDER
         - EXPIRED
         - DATA_COLLECTION_COMPLETED
         - EMAIL_SENT
