Revert "ADA-5064: remove unused notificationType field"
This reverts commit 7b49db597a09167891f14f1b8976ada5b9ef5617.

--- a/consent.yaml
+++ b/consent.yaml
@@ -219,6 +219,7 @@ paths:
                           description: Data will be used to assess your eligibility for a home loan.
                           priority: 1
                           historicalCollectionPeriodInDays: 90
+                          notificationType: EMAIL
                           scopes:
                             - name: 'Bank account name, type and balance'
                               id: 'bank:accounts.basic:read'
@@ -761,6 +762,8 @@ components:
         description:
           type: string
           example: Data will be used to assess your eligibility for a home loan.
+        notificationType:
+          $ref: '#/components/schemas/NotificationType'
         scopes:
           type: array
           items:
@@ -1249,6 +1252,8 @@ components:
           type: integer
           format: int32
           example: 90
+        notificationType:
+          $ref: '#/components/schemas/NotificationType'
         scopes:
           type: array
           items:
@@ -1358,6 +1363,12 @@ components:
       enum:
         - ONCE_OFF
         - ONGOING
+    NotificationType:
+      type: string
+      example: EMAIL
+      enum:
+        - EMAIL
+        - SMS
     PostUsageAction:
       type: string
       example: DELETION
